# amazon-spapi

./: Cargo.toml
src/: lib.rs
src/apis/: mod.rs
src/client/: config.rs
src/models/: mod.rs  string_bool.rs  string_number.rs
src/models/aplus_content_2020_11_01/: content_type.rs
src/models/catalog_items_2022_04_01/: item_search_results.rs
src/models/orders_v0/: address.rs  automated_shipping_settings.rs  exception_dates.rs  order.rs  order_item.rs
