[package]
name = "amazon-spapi"
version = "2.0.2"
edition = "2021"
description = "A Rust client library for Amazon Selling Partner API (SP-API)"
license = "MIT"
repository = "https://github.com/houxd/amazon-spapi"
homepage = "https://github.com/houxd/amazon-spapi"
documentation = "https://docs.rs/amazon-spapi"
keywords = ["amazon", "spapi", "api", "e-commerce", "selling-partner"]
categories = ["api-bindings", "web-programming::http-client"]
authors = ["houxd.g@gmail.com"]
exclude = ["examples/test.rs", "tests/*", ".github/*", "*.log"]

[lib]
crate-type = ["lib"]

[features]
default = ["client"]
client = [
    "serde_repr",
    "anyhow",
    "toml",
    "time",
    "url",
    "log",
    "tokio",
    "reqwest",
]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_with = { version = "3.0", default-features = false, features = [
    "base64",
    "std",
    "macros",
] }
serde_json = "1.0"
serde_repr = { version = "0.1", optional = true }
anyhow = { version = "1.0", optional = true }
toml = { version = "0.9", optional = true }
time = { version = "0.3", optional = true }
url = { version = "2.5", optional = true }
log = { version = "0.4", optional = true }
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "rustls-tls",
], optional = true }
tokio = { version = "1.0", features = [
    "rt-multi-thread",
    "macros",
    "time",
    "net",
    "sync",
], optional = true }

[dev-dependencies]
clap = { version = "4.5.41", features = ["derive"] }
env_logger = "0.10"
csv = "1.3.1"
chrono = "0.4.41"
